# Thermy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  display.h  fix_includes.py  fix_includes.yaml  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  SimpleStats.h  idf_component.yml  lv_conf.h  main.cpp  secrets.example.h  secrets.h  secrets.h.example
main/Application/: ApplicationContext.h  ServiceProvider.h
main/Application/CommandManager/: CommandManager.cpp  CommandManager.h
main/Application/ConsoleManager/: ConsoleManager.cpp  ConsoleManager.h
main/Application/DeviceManager/: DeviceManager.cpp  DeviceManager.h
main/Application/DisplayManager/: DisplayManager.cpp  DisplayManager.h  DisplayPage.cpp  DisplayPage.h  DisplaySettings.cpp  DisplaySettings.h  GraphPage.cpp  GraphPage.h  HomePage.cpp  HomePage.h  SensorPage.cpp  SensorPage.h  SettingsMenuPage.cpp  SettingsMenuPage.h  SystemPage.cpp  SystemPage.h  WifiPage.cpp  WifiPage.h
main/Application/HomeAssistantManager/: HomeAssistantManager.cpp  HomeAssistantManager.h
main/Application/LogManager/: EspFlash.cpp  EspFlash.h  LogDefs.h  LogManager.cpp  LogManager.h
main/Application/MonitorManager/: MonitorManager.cpp  MonitorManager.h
main/Application/MqttManager/: MqttManager.cpp  MqttManager.h
main/Application/NetworkManager/: DnsConfiguration.cpp  DnsConfiguration.h  NetworkInterface.cpp  NetworkInterface.h  NetworkManager.cpp  NetworkManager.h  NetworkTypes.h  WiFiInterface.cpp  WiFiInterface.h
main/Application/SensorManager/: SensorManager.cpp  SensorManager.h
main/Application/SettingsManager/: SettingsDefs.h  SettingsManager.cpp  SettingsManager.h
main/Application/TemperatureHistory/: TemperatureHistory.cpp  TemperatureHistory.h
main/Application/TimeManager/: TimeManager.cpp  TimeManager.h
main/Application/UpdateManager/: UpdateManager.cpp  UpdateManager.h
main/Application/WebServerManager/: StaticFileHandler.cpp  StaticFileHandler.h  WebServerManager.cpp  WebServerManager.h  WebSocketHandler.cpp  WebSocketHandler.h
main/app/: AppContext.h  ServiceProvider.h  TickContext.h
main/app/DataManager/: DataEntry.h  DataKey.h  DataManager.h  DataPair.h  HandledFlags.h  LogCode.h
main/app/DisplayManager/: Display.h  DisplayDriver.h  DisplayManager.cpp  DisplayManager.h  Display_SSD1306.h  Display_SSD1680.h  Display_WT32SC01.cpp  Display_WT32SC01.h  EpaperDriver.cpp  EpaperDriver.h  SSD1306.cpp  SSD1306.h  SSD1680.cpp  SSD1680.h  font5x7.h
main/app/FtpManager/: FtpManager.h
main/app/HardwareManager/: HardwareManager.h
main/app/InfluxManager/: InfluxManager.cpp  InfluxManager.h
main/app/SensorManager/: SensorManager.cpp  SensorManager.h
main/app/SettingsManager/: NetworkSettings.h  RootSettings.h  RuntimeVariables.h  SettingsManager.cpp  SettingsManager.h  SystemSettings.h
main/app/TimeManager/: TimeManager.cpp  TimeManager.h
main/app/WebManager/: GetTemperaturesEndpoint.h  WebManager.cpp  WebManager.h
main/app/WebUpdateManager/: WebUpdateManager.cpp  WebUpdateManager.h
main/app/WifiManager/: WifiManager.cpp  WifiManager.h
main/hardware/: BoardConfig.h  Led.h
main/hardware/display/: Display_WT32SC01.cpp  Display_WT32SC01.h
main/lib/common/: BufferStream.h  BufferedStream.h  EnumFlags.h  EnumOperators.h  Guid.h  HashUtils.h  InitGuard.h  Stream.h  StringConverter.h  UnionStorage.h  Version.h  core_utils.h
(+119 files in other folders)
